# geoquest

./: .gitignore  DEPLOYMENTS.md  PRD.md  README.md
.github/workflows/: contracts-ci.yml  deploy-contracts.yml  frontend-ci.yml
contracts/: Cargo.toml  Makefile
contracts/bounty_escrow/: Cargo.toml
contracts/bounty_escrow/src/: lib.rs
contracts/claim_manager/: Cargo.toml
contracts/claim_manager/src/: lib.rs
contracts/impact_vault/: Cargo.toml
contracts/impact_vault/src/: lib.rs
contracts/quest_registry/: Cargo.toml
contracts/quest_registry/src/: lib.rs
contracts/reward_token/: Cargo.toml
contracts/reward_token/src/: lib.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  wrangler.toml
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminConsole.tsx  CheckInFlow.tsx  Header.tsx  MobileBottomNav.tsx  PrivacyNotice.tsx  QuestDetail.tsx  QuestList.tsx  QuestMap.tsx  StakingPanel.tsx  WalletConnectPrompt.tsx  WalletProfile.tsx
frontend/src/hooks/: useGeolocation.ts  useQuests.ts  useViewport.ts  useWallet.ts
frontend/src/pages/: AdminPage.tsx  HomePage.tsx  ProfilePage.tsx
frontend/src/test/: AdminConsole.test.tsx  Geolocation.test.ts  MobileLayout.test.tsx  QuestList.test.tsx  Wallet.test.ts  WalletConnect.test.tsx  setup.ts
frontend/src/utils/: api.ts  constants.ts  device.ts  geolocation.ts  stellar.ts  wallet.ts
worker/: package.json  tsconfig.json  wrangler.toml
worker/src/: index.test.ts  index.ts
