[workspace]
members = [
    "quest_registry",
    "reward_token",
    "claim_manager",
    "impact_vault",
    "bounty_escrow",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
soroban-sdk = "22.0.0"
soroban-token-sdk = "22.0.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
