[workspace]
resolver = "2"
members = [
    "quest_registry",
    "reward_token",
    "claim_manager",
    "impact_vault",
    "bounty_escrow",
]

[workspace.dependencies]
soroban-sdk = "25"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
